--- a/css/nav.css
+++ b/css/nav.css
@@ -47,9 +47,9 @@
         display: block;
         position:fixed;
         z-index: 10;
-        font-size: 24px;
-        top: 30px;
-        left: 15px;
+        height: 30px;
+        top: 33px;
+        left: 11px;
         color: white;
     }
     .btnbox{
@@ -58,7 +58,7 @@
         z-index: 9;
         background-color: black;
         width: 124px;
-        height: 42px;
+        height: 43px;
         border-radius: 8px;
         font-size: 24px;
         top: 27px;
